codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__account_auth__tests__account_login_api_key.snap
---
source: tui/src/app_shell/account_auth_tests.rs
expression: rendered
---
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"        ╭──────────────────────────────────────────────────────────────────────╮        "
"        │◆ ACCOUNT LOGIN                                                       │        "
"        │Enter an OpenAI API key.                                              │        "
"        │The key is hidden and will not be added to the transcript.            │        "
"        │                                                                      │        "
"        │***************▏                                                      │        "
"        │                                                                      │        "
"        │Enter save   Esc back                                                 │        "
"        │                                                                      │        "
"        ╰──────────────────────────────────────────────────────────────────────╯        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
