codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__account_auth__tests__account_login_api_only_choices.snap
---
source: tui/src/app_shell/account_auth_tests.rs
expression: render_state(&state)
---
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"        ╭──────────────────────────────────────────────────────────────────────╮        "
"        │◆ ACCOUNT LOGIN                                                       │        "
"        │Choose how to sign in.                                                │        "
"        │                                                                      │        "
"        │> 1. Use an API key                                                   │        "
"        │    Store an OpenAI API key through app-server auth.                  │        "
"        │  2. Cancel                                                           │        "
"        │    Keep the current account and return to the session.               │        "
"        │                                                                      │        "
"        │↑↓ / j k navigate   Enter select   Esc close                          │        "
"        │                                                                      │        "
"        ╰──────────────────────────────────────────────────────────────────────╯        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
