codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__account_auth__tests__account_login_browser.snap
---
source: tui/src/app_shell/account_auth_tests.rs
expression: render_state(&state)
---
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"        ╭──────────────────────────────────────────────────────────────────────╮        "
"        │◆ ACCOUNT LOGIN                                                       │        "
"        │Finish signing in with ChatGPT in your browser.                       │        "
"        │                                                                      │        "
"        │https://auth.example.test/browser                                     │        "
"        │                                                                      │        "
"        │Enter open link   Esc cancel                                          │        "
"        │                                                                      │        "
"        ╰──────────────────────────────────────────────────────────────────────╯        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
