codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__account_auth__tests__account_login_device_code.snap
---
source: tui/src/app_shell/account_auth_tests.rs
expression: render_state(&state)
---
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"        ╭──────────────────────────────────────────────────────────────────────╮        "
"        │◆ ACCOUNT LOGIN                                                       │        "
"        │Finish signing in with a device code.                                 │        "
"        │                                                                      │        "
"        │1. Open this link and sign in:                                        │        "
"        │https://auth.example.test/device                                      │        "
"        │                                                                      │        "
"        │2. Enter this one-time code:                                          │        "
"        │ABCD-EFGH                                                             │        "
"        │                                                                      │        "
"        │Only continue if you started this login in Better Codex.              │        "
"        │Esc cancel                                                            │        "
"        │                                                                      │        "
"        ╰──────────────────────────────────────────────────────────────────────╯        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
