codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__account_auth__tests__account_login_success.snap
---
source: tui/src/app_shell/account_auth_tests.rs
expression: render_state(&state)
---
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"        ╭──────────────────────────────────────────────────────────────────────╮        "
"        │◆ ACCOUNT LOGIN                                                       │        "
"        │Signed in successfully.                                               │        "
"        │                                                                      │        "
"        │Better Codex will reload account configuration on the next launch.    │        "
"        │                                                                      │        "
"        │Enter exit                                                            │        "
"        │                                                                      │        "
"        ╰──────────────────────────────────────────────────────────────────────╯        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
"                                                                                        "
